infrastructure/ibmcloud-galasadev-cluster/github-webhook-receiver/github-webhook-receiver-service.yaml
#
# Copyright contributors to the Galasa project 
# 
apiVersion: v1
kind: Service
metadata:
  labels:
    app: github-webhook-receiver
  name: github-webhook-receiver
  namespace: galasa-pipelines
spec:
  ports:
    - port: 80
  selector:
    app: github-webhook-receiver
