infrastructure/ibmcloud-galasadev-cluster/github-webhook-receiver/github-webhook-receiver-ingress.yaml
#
# Copyright contributors to the Galasa project
#
# SPDX-License-Identifier: EPL-2.0
#

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: github-webhook-receiver
  namespace: galasa-pipelines
  annotations:
    kubernetes.io/ingress.class: "public-iks-k8s-nginx"
    
spec:
  tls:
  - hosts:
    - development.galasa.dev
    secretName: galasa-wildcard-cert
  rules:
  - host: development.galasa.dev
    http:
      paths:
      - backend:
          service:
            name: github-webhook-receiver
            port:
              number: 80
        path: /github-webhook-receiver
        pathType: Prefix
